# worldcup

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude-plugin/: plugin.json
.claude/agents/: rust-backend.md
.claude/rules/: database.md
.claude/skills/deploy-orchestrator/: SKILL.md
backend/: Cargo.toml  Dockerfile
backend/migrations/: 0001_init.down.sql  0001_init.sql
backend/src/: bloodline.rs  config.rs  db.rs  error.rs  main.rs  scoring.rs  state.rs
backend/src/domain/: mod.rs
backend/src/routes/: forfeits.rs  hall.rs  health.rs  hub.rs  matches.rs  mod.rs  predictions.rs
deploy/nginx/: nginx.conf
docs/: CONTRACT.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/components/: AcceptWagerModal.tsx  BracketMatchup.tsx  EmptyState.tsx  ForfeitModal.tsx  GroupCard.tsx  MainEventCard.tsx  MatchCalendar.tsx  MatchCard.tsx  MatchPredictionCenter.tsx  Modal.tsx  NextUpWidget.tsx  PointsBadge.tsx  ScoreStepper.tsx  StateChip.tsx  TableCalls.tsx  TeamRow.tsx  WagerCard.tsx  WagerComposerModal.tsx
frontend/src/lib/: bracket.ts  datetime.ts  flags.ts  fonts.ts
frontend/src/state/: AuthContext.tsx
frontend/src/styles/: almanac.css
frontend/src/types/: models.ts
frontend/src/views/: AdminView.tsx  BloodlineView.tsx  BracketView.tsx  Dashboard.tsx  HallOfShame.tsx  HubView.tsx  LeaderboardView.tsx  LoginView.tsx  MatchesView.tsx  PredictView.tsx  WagersView.tsx
scripts/: Dockerfile  README.md  fixtures.py  ingest.py  requirements.txt
server/: Dockerfile  package-lock.json  package.json  tsconfig.json
server/migrations/: 0001_init.down.sql  0001_init.sql  0002_bracket_predictions.down.sql  0002_bracket_predictions.sql
server/src/: db.ts  error.ts  index.ts  migrate.ts  types.ts
server/src/lib/: bracketPicks.test.ts  bracketPicks.ts  liveScores.test.ts  liveScores.ts  scoring.test.ts  scoring.ts  settle.ts  validate.ts  wagers.test.ts  wagers.ts
server/src/middleware/: auth.ts
server/src/routes/: admin.ts  auth.ts  bracket.ts  health.ts  leaderboard.ts  matches.ts  predictions.ts  wagers.ts
